# MicroLoader

./: CMakeLists.txt  ELoader.sln  ReadMe.md
ELoader/: EArray.cpp  EArray.h  ECommon.h  EConfig.h  EContext.cpp  EContext.h  EGC.cpp  EHelpFunc.cpp  EHelpFunc.h  ELoader.cpp  ELoader.h  ELoader.vcxproj  ELoader.vcxproj.filters  ENotifySys.cpp  ENotifySys.h
ELoader/krnln/: krnln.h  krnln_MsgBox.cpp  krnln_MsgBox.hpp  krnln_SetErrorManger.cpp  krnln_SetErrorManger.hpp  krnln_band.cpp  krnln_bnot.cpp  krnln_bnot.hpp  krnln_bor.cpp  krnln_bxor.cpp  krnln_pbin.cpp  krnln_pstr.cpp  krnln_shl.cpp  krnln_shr.cpp
ELoader/utils/: DateTimeFormat.hpp  LTrimZeroChr.hpp
tools/: PE.e  Test.e  ecode.hexpat  epk_dumper.e  inject.epk  inject.py  rebuild.py  易格式体说明.txt  核心库偏移量.txt  窗口解析.ksy  说明.txt
tools/OffsetExporter/: OffsetExporter.sln
tools/OffsetExporter/OffsetExporter/: OffsetExporter.cpp  OffsetExporter.vcxproj  OffsetExporter.vcxproj.filters  lib2.h
